k8s/production/mosquitto-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: fleet-tracker-production
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2
          ports:
            - containerPort: 1883
          volumeMounts:
            - name: mosquitto-config-volume
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
      volumes:
        - name: mosquitto-config-volume
          configMap:
            name: mosquitto-config
