k8s/production/api-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: fleet-tracker-production
  labels:
    app: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
