k8s/production/auth-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: fleet-tracker-production
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
