k8s/production/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: fleet-tracker-production
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
