k8s/production/location-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: location-service
  namespace: fleet-tracker-production
  labels:
    app: location-service
spec:
  selector:
    app: location-service
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
  type: ClusterIP
