k8s/production/mosquitto-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
  namespace: fleet-tracker-production
  labels:
    app: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883
      targetPort: 1883
  type: ClusterIP
