k8s/production/notification-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: fleet-tracker-production
  labels:
    app: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
  type: ClusterIP
