k8s/production/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: fleet-tracker-production
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
