k8s/production/vehicle-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vehicle-service
  namespace: fleet-tracker-production
  labels:
    app: vehicle-service
spec:
  selector:
    app: vehicle-service
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
  type: ClusterIP
